# aos

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build_iso.bat  kernel.toolchain.cmake  qemu.bat
include/: std_extention.hxx
include/kernel/: kernel.hxx
include/x86_64/: instructions.hxx  isr.hxx  paging.hxx  segment.hxx
iso_root/EFI/BOOT/: BOOTIA32.EFI  BOOTX64.EFI
iso_root/boot/limine/: limine-bios.sys  limine.conf
src/: entry.cxx  linker.lds
src/x86_64/: init0.cxx  isr.cxx  isr.s  kernel.cxx  limine.cxx  mem.cxx  paging.cxx  segment.s
